--- a/sections.html
+++ b/sections.html
@@ -1,3 +1,104 @@
+
+
+<!-- =============================================== -->
+<!-- ============== TOPHOST HOMEPAGE =============== -->
+<!-- =============================================== -->
+
+<!-- GR -->
+<div class="l-submain">
+    <div class="header_box wow fadeIn l-submain-in text-center">
+        <div class="inner_head_text_frame">
+            <h2>H πιο Εxtreme & Αξιόπιστη εμπειρία Web Hosting</h2>
+            <hr>
+            <h3>Lightning Fast υπηρεσίες Hosting σε Ελλάδα και Ευρώπη, σε ιδιόκτητους servers. Η δυνατή ομάδα Support της Top.Host είναι πάντα δίπλα σου για φιλική και Extreme Υποστήριξη.</h3>
+        </div>
+    </div>
+</div>
+
+<!-- EN -->
+<div class="l-submain">
+    <div class="header_box wow fadeIn l-submain-in text-center">
+        <div class="inner_head_text_frame">
+            <h2>Elastic Web Hosting Speed & Security Optimized</h2>
+            <hr>
+            <h3>Web Hosting services carefully optimized, with a focus on high uptime, speed, security and Extreme Support.</h3>
+        </div>
+    </div>
+</div>
+
+
+<style>
+
+
+.homepage .header {
+    background-image: url(............../homepage_2020.jpg);
+    background-position: 50% 18%;
+}
+
+.homepage .header h2 {
+    background:none;
+}
+
+.homepage .inner_head_text_frame {
+    background-color: rgba(0,0,0,0.78);
+    max-width: 800px;
+    margin: auto;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+
+
+.homepage .header h2 {
+    margin: auto;
+    margin-bottom:0;
+    padding:0 15px 25px 15px;
+}
+
+.homepage .header hr {
+    border-bottom: 1px solid white;
+    border-bottom: none;
+    width:80%;
+}
+
+.homepage .header h3 {
+    position:initial;
+    top:initial;
+    padding-top:25px;
+    line-height:24px;
+    padding-left:15px;
+    padding-right:15px;
+}
+
+
+@media (max-width:768px) {
+    .homepage .header {
+        padding:40px 10px 60px 10px;
+    }
+}
+
+@media only screen and (max-width: 479px) {
+
+    .homepage .header {
+        padding-top:40px;
+        padding-bottom:40px;
+    }    
+
+    .homepage .l-submain-in h3 {
+        display: block;
+    }
+}        
+
+    @media only screen and (max-width: 992px) {
+        .homepage .header {
+            background-position: 100% 50%;
+        }
+    }
+
+</style>
+
+
+
 <!-- =============================================== -->
 <!-- ============ WEB HOSTING ELASTIC ============== -->
 <!-- =============================================== -->
