--- a/sections.html
+++ b/sections.html
@@ -126,7 +126,7 @@
 </div>
 
 <style>
-.webhosting .header {
+.container-fluid.webhosting .header {
     padding-top:100px;
     padding-bottom:100px;
     max-height:initial;
@@ -134,11 +134,11 @@
     background: url(......../elastic_2020_hero.jpg) no-repeat 50% 50%;  
 }
 
-.webhosting .header h2 {
+.container-fluid.webhosting .header h2 {
     background:none;
 }
 
-.webhosting .inner_head_text_frame {
+.container-fluid.webhosting .inner_head_text_frame {
     background-color: rgba(0,0,0,0.78);
     max-width: 680px;
     margin: auto;
@@ -148,19 +148,19 @@
 
 
 
-.webhosting .header h2 {
+.container-fluid.webhosting .header h2 {
     margin: auto;
     margin-bottom:0;
     padding:0 15px 25px 15px;
 }
 
-.webhosting .header hr {
+.container-fluid.webhosting .header hr {
     border-bottom: 1px solid white;
     border-bottom: none;
     width:80%;
 }
 
-.webhosting .header h3 {
+.container-fluid.webhosting .header h3 {
     position:initial;
     top:initial;
     padding-top:25px;
@@ -171,19 +171,19 @@
 
 
 @media (max-width:768px) {
-    .webhosting .header {
+    .container-fluid.webhosting .header {
         padding:60px 10px 60px 10px;
     }
 }
 
 @media only screen and (max-width: 479px) {
 
-    .webhosting .header {
+    .container-fluid.webhosting .header {
         padding-top:40px;
         padding-bottom:40px;
     }    
 
-    .webhosting .l-submain-in h3 {
+    .container-fluid.webhosting .l-submain-in h3 {
         display: block;
     }
 }    
