--- a/sections.html
+++ b/sections.html
@@ -217,7 +217,6 @@
     </div>
 </div>
 
-Να προστεθεί η class ssl_certificates εκεί που βρίσκεται και η class webhosting
 
 <style>
 .webhosting.ssl_certificates .header {
@@ -314,6 +313,8 @@
         </div>
     </div>
 </div>
+
+Να προστεθεί η class ssl_brands_page εκεί που βρίσκεται και η class webhosting
 
 <style>
 .webhosting.ssl_brands_page .header {
