--- a/sections.html
+++ b/sections.html
@@ -8,9 +8,12 @@
 <div class="l-submain">
     <div class="header_box wow fadeIn l-submain-in text-center">
         <div class="inner_head_text_frame">
-            <h2>H πιο Εxtreme & Αξιόπιστη εμπειρία Web Hosting</h2>
+            <h2>H πιο Εxtreme &amp; Αξιόπιστη εμπειρία Web Hosting</h2>
             <hr>
             <h3>Lightning Fast υπηρεσίες Hosting σε Ελλάδα και Ευρώπη, σε ιδιόκτητους servers. Η δυνατή ομάδα Support της Top.Host είναι πάντα δίπλα σου για φιλική και Extreme Υποστήριξη.</h3>
+        </div>
+        <div class="l-submain-in text-center">
+                <a class="wow fadeIn g-btn type_primary size_big choose_package" href="web-hosting.htm">ΔΕΣ ΤΑ ΠΑΚΕΤΑ</a>
         </div>
     </div>
 </div>
@@ -19,12 +22,16 @@
 <div class="l-submain">
     <div class="header_box wow fadeIn l-submain-in text-center">
         <div class="inner_head_text_frame">
-            <h2>Elastic Web Hosting Speed & Security Optimized</h2>
+            <h2>Εxtreme & Reliable Web Hosting Experience</h2>
             <hr>
-            <h3>Web Hosting services carefully optimized, with a focus on high uptime, speed, security and Extreme Support.</h3>
+            <h3>Lightning fast hosting services in private European servers. The Extreme Support Team of Top.Host is always at your disposal for immediate and friendly support.</h3>
+        </div>
+        <div class="l-submain-in text-center">
+                <a class="wow fadeIn g-btn type_primary size_big choose_package" href="web-hosting.htm">EXPLORE OUR PLANS</a>
         </div>
     </div>
 </div>
+
 
 
 <style>
